--- a/public/css/mytabcloud.css
+++ b/public/css/mytabcloud.css
@@ -14,11 +14,12 @@ box-shadow: 5px 5px 5px #999;
 border:#ddd solid 1px; 
 background-color:#ffffff;}
 
+#tab_display p { margin-left: 10px; }
 
 .tab_description { width: 250px; height:100px; }
 
-.tab_line { width: 800px; height: auto;}
-.tab_line table { width: auto; margin-left:20px; margin-right:20px;  }
+.tab_line { height: auto; margin-bottom: 20px; }
+.tab_line table { width: auto; margin-left:10px; }
 .tab_line td { background-color: transparent; padding: 0 0 0 0; margin: 0 0 0 0; background-image: url('/mytabcloud/public/images/tab_line.png'); background-repeat: repeat-x; background-position: center left; }
 .tab_line .tab_tuning { background-image:none; padding-right:3px; }
 .tab_line input { margin: 0 0 0 0; padding: 0 0 0 0; border: 0px; text-align:center; background: transparent; height:1.5em; width:1.7em; }
