--- a/application/views/scripts/tab/edit.phtml
+++ b/application/views/scripts/tab/edit.phtml
@@ -22,20 +22,21 @@ if($this->has_tab) {
             	<ul>
             		<li><a href="#tab-song">Song Information</a></li>
             		<li><a href="#tab-config">Tab configuration</a></li>
+					<li><a href="#tab-content">Tab content</a></li>
             	</ul>
 	            <div id="tab-song">
 		            <table>
 		                <tr>
-		                    <td><label for="artist" class="required">Artist</label></td>
-		                    <td><input type="text" name="artist" id="artist" value="<?php echo $this->params['artist']; ?>" /></td>
+							<td><?php echo $this->formLabel('artist', 'Artist', array('class' => 'required')); ?></td>
+		                    <td><?php echo $this->formText('artist', $this->params['artist'], null); ?></td>
 		                </tr>                     
 		                <tr>
-		                    <td><label for="title" class="required">Title</label></td>                     
-		                    <td><input type="text" name="title" id="title" value="<?php echo $this->params['title']; ?>" /></td>
+							<td><?php echo $this->formLabel('title', 'Title', array('class' => 'required')); ?></td>                     
+		                    <td><?php echo $this->formText('title', $this->params['title'], null); ?></td>
 		                </tr>
 		                <tr>
-		                    <td><label for="description" class="required">Description</label></td>                     
-		                    <td><textarea name="description" id="description" class="tab_description"><?php echo $this->params['description']; ?></textarea></td>
+							<td><?php echo $this->formLabel('description', 'Description', array('class' => 'required')); ?></td>                     
+		                    <td><?php echo $this->formTextarea('description', $this->params['description'], array('class' => 'tab_description')); ?></td>
 		                </tr>
 		            </table>
 	                <!-- <dt id="title-label"><label for="tuning" class="required">Tuning</label></dt>                     
@@ -44,30 +45,34 @@ if($this->has_tab) {
 	            <div id="tab-config">
 		            <table>
 						<tr>
-							<td><label for="preset" class="required">Preset</label></td>
+							<td><?php echo $this->formLabel('preset', 'Preset', array('class' => 'required')); ?></td>
 							<td>
-								<select name="preset" id="preset">
-									<option value="" selected="true"></option>
-								<?php
-									foreach($this->presets as $preset) {
-										echo '<option value="' . $preset->getNbStrings() . ';' . $preset->getTuning() . '">' . $preset->getName() . '</option>';
-									}
-								?>
+								<?php echo $this->formSelect('preset', '1', null, $this->presets); ?>
+							</td>
+							<td><?php echo $this->formLabel('visibility', 'Visibility', array('class' => 'required')); ?></td>
+							<td>
+								<select name="visibility" id="visibility">
+									<option value="public" <?php if($this->params['visibility'] == 'public') echo 'selected="true"'; ?>>Public</option>
+									<option value="private" <?php if($this->params['visibility'] == 'private') echo 'selected="true"'; ?>>Private</option>
 								</select>
 							</td>
 						</tr>
 						<tr>
-		                    <td><label for="nb_strings" class="required">Strings</label></td>                     
+							<td><?php echo $this->formLabel('nb_strings', 'Strings', array('class' => 'required')); ?></td>                     
 		                    <td>
-		                        <input type="text" name="nb_strings" id="nb_strings" size="5" value="<?php echo (($this->params['nb_strings'] != "") ? $this->params['nb_strings'] : DEFAULT_STRINGS); ?>" />
-		                        <img src='/mytabcloud/public/images/updown.png' width='14' height='19' style="vertical-align:middle;" usemap='#nb_strings_map'></img>
+								<?php echo $this->formText('nb_strings', $this->params['nb_strings'], array('size' => '5')); ?>
+		                        <img src='<?php echo $this->baseUrl(); ?>/images/updown.png' width='14' height='19' style="vertical-align:middle;" usemap='#nb_strings_map'></img>
 		                    </td>
+							<td><?php echo $this->formLabel('instrument', 'Instrument', array('class' => 'required')); ?></td>
+							<td>
+								<?php echo $this->formSelect('instrument', $this->params['instrument'], null, $this->instruments); ?>
+							</td>
 		                </tr>
 		                <tr>
-		                    <td><label for="capo" class="required">Capo</label></td>                     
-		                    <td>
-		                        <input type="text" name="capo" id="capo" size="5" value="<?php echo (($this->params['capo'] != "") ? $this->params['capo'] : 0); ?>" />
-		                        <img src='/mytabcloud/public/images/updown.png' width='14' height='19' style="vertical-align:middle;" usemap='#capo_map'></img>
+		                    <td><?php echo $this->formLabel('capo', 'Capo', array('class' => 'required')); ?></td>
+							 <td>
+								<?php echo $this->formText('capo', $this->params['capo'], array('size' => '5')); ?>
+		                        <img src='<?php echo $this->baseUrl(); ?>/images/updown.png' width='14' height='19' style="vertical-align:middle;" usemap='#capo_map'></img>
 		                    </td>
 		                </tr>
 		                <tr>
@@ -76,8 +81,8 @@ if($this->has_tab) {
 							<?php
 								for($tun_str = 0 ; $tun_str < $this->params['nb_strings'] ; $tun_str++) {
 									echo '<div id="tuning_div_' . $tun_str . '">';
-									echo '<input type="text" name="tuning_' . $tun_str . '" id="tuning_' . $tun_str . '" size="3" value="'.$this->params['tuning'][$tun_str].'" />';
-									echo '<img src="/mytabcloud/public/images/updown.png" width="14" height="19" class="updownimg" usemap="#map_tuning_'.$tun_str.'"></img>';
+									echo $this->formText('tuning_' . $tun_str, $this->params['tuning'][$tun_str], array('size' => '3'));
+									echo '<img src="' . $this->baseUrl() .'/images/updown.png" width="14" height="19" class="updownimg" usemap="#map_tuning_'.$tun_str.'"></img>';
 									echo '<map name="map_tuning_'.$tun_str.'">';
 									echo '	<area shape="rect" coords="0,11,20,22" href="javascript:fctTuneDown(\'#tuning_'.$tun_str.'\');" />';
 									echo '	<area shape="rect" coords="0,0,20,10" href="javascript:fctTuneUp(\'#tuning_'.$tun_str.'\');" />';                        
@@ -89,20 +94,17 @@ if($this->has_tab) {
 		                </tr>
 	               </table>   
 	            </div>
+				<div id="tab-content">
+					<div id="tab_display">
+						<?php echo $this->tab_display; ?>
+					</div>
+					<p class="add_line"><a href="javascript:addTabLine();">Add Line</a></p>
+				</div>
 			</div>
-         </div>   
-                       	
-            
-        <div id="tab_display">
-        <?php echo $this->tab_display; ?>
-        </div>
-        
-        <p class="add_line"><a href="javascript:addTabLine();">Add Line</a></p>
-            
+         </div>     
                 
         <dl class="zend_form">
-            <dt id="submit-label">&#160;</dt><dd id="submit-element">
-            <input type="submit" name="submit" id="submit" value="Save" /></dd>
+            <?php echo $this->formSubmit('submit', 'Save', null); ?>
         </dl>
         </form>
 <?php
